tests/syntax/incorrect_syntax/wrong_stage.stderr
error: multiple INPUTs aren't allowed
 --> tests/syntax/incorrect_syntax/wrong_stage.rs:6:26
  |
6 |     to_stream!(INPUT(a), INPUT(a), {
  |                          ^^^^^
